# aggbench

./: Makefile  README.md  summary.txt
aggclickhouse/: clickhouse.sql
agggo/: .gitignore  common_test.go  duckdbperf_test.go  duckperf_test.go  go.mod  go.sum  goperf_test.go
aggkotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
aggkotlin/src/jmh/kotlin/: SalesAggregationBenchmark.kt
aggrust/: .gitignore  Cargo.toml
aggrust/benches/: aggbench.rs
aggzig/: .gitignore  build.zig  build.zig.zon
aggzig/src/: main.zig  sales.zig
