[package]
name = "aggrust"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.2.0"
datafusion = { version = "48.0.1", features = [] }
rand = "0.9.1"
serde = "1.0.219"
tokio = { version = "1.46.1", features = ["full", "rt-multi-thread"] }
duckdb = { version = "1.3.2", features = ["appender-arrow", "bundled"] }
fxhash = "0.2.1"
parquet = "55.2.0"

[[bench]]
name = "aggbench"
harness = true
